<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.gitnb.MainActivity" >

    <item
        android:id="@+id/menu_item_unstar"
        app:showAsAction="never"
        android:visible="false"
        android:icon="@drawable/ic_star_white_24dp"
        android:title="@string/menu_unstar_title"/>
    <item
        android:id="@+id/menu_item_star"
        app:showAsAction="never"
        android:visible="false"
        android:icon="@drawable/ic_star_yellow_36dp"
        android:title="@string/menu_star_title"/>
    <item
        android:id="@+id/menu_item_fork"
        app:showAsAction="never"
        android:visible="false"
        android:icon="@drawable/ic_star_yellow_36dp"
        android:title="@string/menu_fork_title"/>
    <item
        android:id="@+id/menu_item_share"
        android:title="@string/menu_share_title"
        android:visible="false"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        app:actionLayout="@layout/share_action_provider_view"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item_add_issue"
        android:title="@string/menu_add_issue_title"
        android:visible="false"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        app:actionLayout="@layout/share_action_provider_view"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item_edit_issue"
        android:title="@string/menu_edit_issue_title"
        android:visible="false"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        app:actionLayout="@layout/share_action_provider_view"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item_close_issue"
        android:title="@string/menu_close_issue_title"
        android:visible="false"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        app:actionLayout="@layout/share_action_provider_view"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item_add_comment"
        android:title="@string/menu_add_comment_title"
        android:visible="false"
        android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
        app:actionLayout="@layout/share_action_provider_view"
        app:showAsAction="never"/>
</menu>
